[metadata]
name = chemometrics
version = 0.3.0
author = Matthias Rüdt
author_email = mruedt@icloud.com
description = package for chemometric data analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maruedt/chemometrics
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires= >=3.8
